--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="">
 <head>
     <title></title>
     <script src="angular.min.js"></script>
-    <script src="code.js"></script>
+
 
 </head>
 <body>
 
-
+<script src="code.js"></script>
 <div ng-controller="Encrypt">
-
-
+ <input type="text" ng-model="phrase" default = "Default">
+ <input type="text" ng-model="pass" default = "Default">
+ <input type="submit" value="Gibberishify" ng-click="gibberish()">
+  {{result}}
 </div>
 </body>
 </html>
