--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
  <input type="text" ng-model="phrase" default = "Default">
  <input type="text" ng-model="pass" default = "Default">
  <input type="submit" value="Gibberishify" ng-click="gibberish()">
-  {{result}}
+    <h4> </h4>
+    {{phrase}}
+    <h4>+</h4>
+    {{pass}}
+    <h4>=</h4>
+    {{result}}
 </div>
 </body>
 </html>
